--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -2,22 +2,26 @@ server {
     listen 80;
     server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
-
+    # Обслуживание React-приложения
     location / {
+        root /usr/share/nginx/html;
+        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    location /images/ {
-       alias /usr/share/nginx/html/static/;
-    }
-
+    # Проксирование запросов к API
     location /api/ {
-        proxy_pass http://backend:3002;  # Прокси для API-запросов на бекенд
+        proxy_pass http://backend:3002;  # Проксирование запросов к бэкенду
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    # Логи для отладки
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
