--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,9 @@
-server {
+events {
+    worker_connections 1024;
+}
+
+http {
+    server {
         listen 80;
 
         location / {
@@ -17,8 +22,7 @@ server {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-         # Логи для отладки
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-
+        error_log /var/log/nginx/error.log;
+        access_log /var/log/nginx/access.log;
     }
+}
