--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -5,6 +5,23 @@ events {
 http {
     server {
         listen 80;
+        server_name poleeducation.in.ua;
+
+        # Перенаправление на HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+
+        error_log /var/log/nginx/error.log debug;
+        access_log /var/log/nginx/access.log;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name poleeducation.in.ua;
+
+        ssl_certificate /etc/nginx/certs/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         # Проксирование запросов на фронтенд (React)
         location / {
