--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -8,7 +8,7 @@ services:
         ports:
             - '3002:3002'
         env_file:
-            - .env
+            - .env.production
         environment:
             - DATABASE_URL=postgres://fedigo_admin:Igor18052008@db_auth:5432/poleeducation
         depends_on:
@@ -21,6 +21,8 @@ services:
         container_name: frontend
         ports:
             - '3001:80'
+        env_file:
+            - .env.production
         depends_on:
             - backend
 
