add phone ni frontend backend

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -29,6 +29,7 @@ services:
             - .env.development
         volumes:
             - ./frontend:/frontend
+            - /frontend/node_modules
         depends_on:
             - backend
 
