--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
 		"axios": "^1.6.8",
 		"dotenv": "^16.4.5",
 		"html2pdf.js": "^0.10.2",
+		"i18next": "^23.14.0",
 		"jwt-decode": "^4.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-i18next": "^15.0.1",
 		"react-router-dom": "^6.22.3",
 		"react-scripts": "^5.0.1",
 		"react-select": "^5.8.0",
