--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name poleeducation.in.ua;
+        server_name poleeducation.in.ua www.poleeducation.in.ua;
 
         # Перенаправление на HTTPS
         location / {
@@ -18,7 +18,7 @@ http {
 
     server {
         listen 443 ssl;
-        server_name poleeducation.in.ua;
+        server_name poleeducation.in.ua www.poleeducation.in.ua;
 
         ssl_certificate /etc/nginx/certs/fullchain.pem;
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
