--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,9 +1,8 @@
-version: '3.8'
-
 services:
     backend:
         build:
             context: ./backend
+            dockerfile: Dockerfile.prod
         container_name: backend
         ports:
             - '3002:3002'
