--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -3,45 +3,42 @@ events {
 }
 
 http {
-    server {
-        listen 80;
-        server_name poleeducation.in.ua www.poleeducation.in.ua;
+      GNU nano 6.2                                                         /etc/nginx/sites-available/poleeducation.in.ua
+server {
+    listen 80;
+    server_name poleeducation.in.ua www.poleeducation.in.ua;
 
-        # Перенаправление на HTTPS
-        location / {
-            return 301 https://$host$request_uri;
-        }
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
 
-        error_log /var/log/nginx/error.log debug;
-        access_log /var/log/nginx/access.log;
+server {
+    listen 443 ssl;
+    server_name poleeducation.in.ua www.poleeducation.in.ua;
+
+    ssl_certificate /etc/letsencrypt/live/poleeducation.in.ua/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/poleeducation.in.ua/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass http://127.0.0.1:3001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    server {
-        listen 443 ssl;
-        server_name poleeducation.in.ua www.poleeducation.in.ua;
-
-        ssl_certificate /etc/nginx/certs/fullchain.pem;
-        ssl_certificate_key /etc/nginx/certs/privkey.pem;
-
-        # Проксирование запросов на фронтенд (React)
-        location / {
-            proxy_pass http://frontend:80;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Проксирование API запросов на бекенд (Express.js)
-        location /api/ {
-            proxy_pass http://backend:3002;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        error_log /var/log/nginx/error.log debug;
-        access_log /var/log/nginx/access.log;
+    location /api/ {
+        proxy_pass http://127.0.0.1:3002;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    error_log /var/log/nginx/error.log warn;
+    access_log /var/log/nginx/access.log;
+}
 }
