--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,19 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^1.6.8",
+		"bootstrap": "^5.3.3",
 		"dotenv": "^16.4.5",
 		"html2pdf.js": "^0.10.2",
 		"i18next": "^23.14.0",
 		"jwt-decode": "^4.0.0",
 		"react": "^18.2.0",
+		"react-bootstrap": "^2.10.4",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^15.0.1",
 		"react-router-dom": "^6.22.3",
 		"react-scripts": "^5.0.1",
 		"react-select": "^5.8.0",
+		"sass": "^1.78.0",
 		"serve": "^14.2.3",
 		"web-vitals": "^2.1.4"
 	},
