--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,6 @@
 		"react-router-dom": "^6.22.3",
 		"react-scripts": "^5.0.1",
 		"react-select": "^5.8.0",
-		"sass": "^1.78.0",
 		"serve": "^14.2.3",
 		"web-vitals": "^2.1.4"
 	},
@@ -48,6 +47,13 @@
 		]
 	},
 	"devDependencies": {
-		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+		"autoprefixer": "^10.4.20",
+		"css-loader": "^7.1.2",
+		"postcss": "^8.4.47",
+		"react-app-rewired": "^2.2.1",
+		"sass": "^1.80.3",
+		"sass-loader": "^16.0.2",
+		"style-loader": "^4.0.0"
 	}
 }
