--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,6 +1,9 @@
 # Используем Node.js для запуска приложения
 FROM node:20-alpine
 
+# Устанавливаем pnpm глобально
+RUN npm install -g pnpm
+
 # Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /frontend
 
@@ -8,7 +11,7 @@ WORKDIR /frontend
 COPY package*.json ./
 
 # Устанавливаем зависимости
-RUN npm install
+RUN pnpm install
 
 # Копируем локальные файлы проекта в контейнер (в dev режиме они будут монтироваться)
 COPY . .
@@ -17,4 +20,4 @@ COPY . .
 EXPOSE 3000
 
 # Запускаем сервер разработки
-CMD ["npm", "start"]
+CMD ["pnpm", "start"]
