--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 		"html2pdf.js": "^0.10.2",
 		"i18next": "^23.14.0",
 		"jwt-decode": "^4.0.0",
+		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.10.4",
 		"react-dom": "^18.2.0",
@@ -48,8 +49,12 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+		"@eslint/js": "^9.13.0",
 		"autoprefixer": "^10.4.20",
 		"css-loader": "^7.1.2",
+		"eslint": "^8.57.1",
+		"eslint-plugin-react": "^7.37.1",
+		"globals": "^15.11.0",
 		"postcss": "^8.4.47",
 		"react-app-rewired": "^2.2.1",
 		"sass": "^1.80.3",
