--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"react-bootstrap": "^2.10.4",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^15.0.1",
+		"react-icons": "^5.3.0",
 		"react-router-dom": "^6.22.3",
 		"react-scripts": "^5.0.1",
 		"react-select": "^5.8.0",
