--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,8 +13,8 @@ services:
         environment:
             - DATABASE_URL=postgres://fedigo_admin:Igor18052008@db_auth:5432/poleeducation_db
         volumes:
-            - ./backend:/app
-            - /app/node_modules
+            - ./backend:/backend
+            - backend_data:/backend/node_modules
         depends_on:
             - db_auth
 
@@ -29,7 +29,7 @@ services:
             - .env.development
         volumes:
             - ./frontend:/frontend
-            - /frontend/node_modules
+            - frontend_data:/frontend/node_modules
         depends_on:
             - backend
 
@@ -59,3 +59,5 @@ services:
 
 volumes:
     db_data:
+    backend_data:
+    frontend_data:
