--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -23,7 +23,8 @@ RUN pnpm run build
 FROM nginx:alpine
 
 # Копируем сгенерированные файлы в директорию, обслуживаемую Nginx
-COPY --from=builder /frontend/build /usr/share/nginx/html
+COPY --from=build /frontend/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 
 # Открываем порт 80
 EXPOSE 80
