--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,11 +8,9 @@ http {
 
         # Проксирование запросов на фронтенд (React)
         location / {
-            proxy_pass http://frontend:80;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            root /usr/share/nginx/html; # Убедитесь, что путь совпадает с местом, куда копируются файлы React
+            index index.html;
+            try_files $uri /index.html; # Если файл не найден, перенаправлять на index.html
         }
 
         location /api/ {
