--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -11,7 +11,10 @@ WORKDIR /frontend
 COPY package*.json ./
 
 # Устанавливаем зависимости
-RUN pnpm install
+COPY package.json pnpm-lock.yaml ./
+
+# Устанавливаем зависимости
+RUN pnpm install --frozen-lockfile
 
 # Копируем все файлы проекта в контейнер
 COPY . .
@@ -23,8 +26,13 @@ RUN pnpm run build
 FROM nginx:alpine
 
 # Копируем сгенерированные файлы в директорию, обслуживаемую Nginx
-COPY --from=build /frontend/build /usr/share/nginx/html
+COPY --from=builder /frontend/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
+
+# Устанавливаем стандартный пользовательский каталог логов
+RUN mkdir -p /var/log/nginx && \
+    touch /var/log/nginx/access.log && \
+    touch /var/log/nginx/error.log
 
 # Открываем порт 80
 EXPOSE 80
