--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,15 +3,17 @@ events {
 }
 
 http {
-    server {
-        listen 80;
+   server {
+    listen 80;
 
-        # Проксирование запросов на фронтенд (React)
-        location / {
-            root /usr/share/nginx/html; # Убедитесь, что путь совпадает с местом, куда копируются файлы React
-            index index.html;
-            try_files $uri /index.html; # Если файл не найден, перенаправлять на index.html
-        }
+    # Указываем папку со статическими файлами React
+    root /var/www/html;
+    index index.html;
+
+    # Для SPA перенаправляем все маршруты на index.html
+    location / {
+        try_files $uri /index.html;
+    }
 
         location /api/ {
             proxy_pass http://backend:3002;
