--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -22,20 +22,21 @@ COPY . .
 # Собираем приложение для продакшена
 RUN pnpm run build
 
-# Используем Nginx для отдачи статики
-FROM nginx:alpine
+# Минимальный образ для передачи собранной сборки
+FROM alpine AS artifact
 
 # Копируем сгенерированные файлы в директорию, обслуживаемую Nginx
 COPY --from=builder /frontend/build /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
+# COPY nginx.conf /etc/nginx/nginx.conf
 
-# Устанавливаем стандартный пользовательский каталог логов
-RUN mkdir -p /var/log/nginx && \
-    touch /var/log/nginx/access.log && \
-    touch /var/log/nginx/error.log
 
-# Открываем порт 80
-EXPOSE 80
+# # Устанавливаем стандартный пользовательский каталог логов
+# RUN mkdir -p /var/log/nginx && \
+#     touch /var/log/nginx/access.log && \
+#     touch /var/log/nginx/error.log
 
-# Запускаем Nginx
-CMD ["nginx", "-g", "daemon off;"]
+# # Открываем порт 80
+# EXPOSE 80
+
+# # Запускаем Nginx
+# CMD ["nginx", "-g", "daemon off;"]
