--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,4 +1,4 @@
-# Строим проект с использованием Node.js
+# Этап сборки
 FROM node:20-alpine AS builder
 
 # Устанавливаем pnpm глобально
@@ -7,10 +7,7 @@ RUN npm install -g pnpm
 # Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /frontend
 
-# Копируем файл package.json и package-lock.json для установки зависимостей
-COPY package*.json ./
-
-# Устанавливаем зависимости
+# Копируем файл package.json и pnpm-lock.yaml для установки зависимостей
 COPY package.json pnpm-lock.yaml ./
 
 # Устанавливаем зависимости
@@ -22,21 +19,14 @@ COPY . .
 # Собираем приложение для продакшена
 RUN pnpm run build
 
-# Минимальный образ для передачи собранной сборки
+# Этап передачи артефактов (минимальный образ)
 FROM alpine AS artifact
 
-# Копируем сгенерированные файлы в директорию, обслуживаемую Nginx
-COPY --from=builder /frontend/build /usr/share/nginx/html
-# COPY nginx.conf /etc/nginx/nginx.conf
+# Копируем build из этапа сборки
+COPY --from=builder /frontend/build /frontend/build
 
+# Устанавливаем рабочую директорию для ясности
+WORKDIR /frontend/build
 
-# # Устанавливаем стандартный пользовательский каталог логов
-# RUN mkdir -p /var/log/nginx && \
-#     touch /var/log/nginx/access.log && \
-#     touch /var/log/nginx/error.log
-
-# # Открываем порт 80
-# EXPOSE 80
-
-# # Запускаем Nginx
-# CMD ["nginx", "-g", "daemon off;"]
+# По умолчанию завершение работы
+CMD ["sh", "-c", "echo 'Build artifacts are ready'"]
