--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -22,12 +22,11 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+
     location / {
-        proxy_pass http://127.0.0.1:3001;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        root /var/www/html;
+        index index.html;
+        try_files $uri /index.html;
     }
 
     location /api/ {
