--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,17 +3,19 @@ events {
 }
 
 http {
-   server {
-    listen 80;
+     client_max_body_size 50M; # Установить лимит на загрузку файлов
 
-    # Указываем папку со статическими файлами React
-    root /var/www/html;
-    index index.html;
+     server {
+        listen 80;
 
-    # Для SPA перенаправляем все маршруты на index.html
-    location / {
-        try_files $uri /index.html;
-    }
+        # Проксирование запросов на фронтенд (React)
+        location / {
+            proxy_pass http://frontend:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
         location /api/ {
             proxy_pass http://backend:3002;
