--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -22,6 +22,7 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+     client_max_body_size 50M;
 
     location / {
         root /var/www/html;
