--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,8 @@ services:
         build:
             context: ./frontend
             dockerfile: Dockerfile.dev
+        environment:
+            - REACT_APP_API_URL=http://localhost:3002
         container_name: frontend
         ports:
             - '3001:3000'
@@ -54,8 +56,8 @@ services:
         ports:
             - '80:80'
         depends_on:
-            - frontend
             - backend
+            - frontend
 
 volumes:
     db_data:
