--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -17,12 +17,27 @@ server {
     listen 443 ssl;
     server_name poleeducation.in.ua www.poleeducation.in.ua;
 
+     # Заголовки безопасности
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+    add_header X-Content-Type-Options "nosniff";
+
     ssl_certificate /etc/letsencrypt/live/poleeducation.in.ua/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/poleeducation.in.ua/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
      client_max_body_size 50M;
+
+    # Ограничение доступа к чувствительным файлам
+    location ~* \.(pem|jks|war|tar|bz2|tgz|cer|egg|alz|key)$ {
+            deny all;
+    }
+
+    # Запрет доступа к скрытым файлам (например, .htaccess)
+    location ~ /\. {
+            deny all;
+    }
 
     location / {
         root /var/www/html;
