--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,68 +1,73 @@
 {
-	"name": "client",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@ant-design/icons": "^5.5.1",
-		"@tanstack/react-query": "^5.62.3",
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"antd": "^5.22.2",
-		"axios": "^1.6.8",
-		"bootstrap": "^5.3.3",
-		"dotenv": "^16.4.5",
-		"html2pdf.js": "^0.10.2",
-		"i18next": "^23.14.0",
-		"jwt-decode": "^4.0.0",
-		"prop-types": "^15.8.1",
-		"react": "^18.2.0",
-		"react-bootstrap": "^2.10.4",
-		"react-dom": "^18.2.0",
-		"react-i18next": "^15.0.1",
-		"react-icons": "^5.3.0",
-		"react-router-dom": "^6.22.3",
-		"react-scripts": "^5.0.1",
-		"react-select": "^5.8.0",
-		"serve": "^14.2.3",
-		"web-vitals": "^2.1.4"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-		"@eslint/js": "^9.13.0",
-		"autoprefixer": "^10.4.20",
-		"css-loader": "^7.1.2",
-		"eslint": "^8.57.1",
-		"eslint-plugin-react": "^7.37.1",
-		"globals": "^15.11.0",
-		"postcss": "^8.4.47",
-		"react-app-rewired": "^2.2.1",
-		"sass": "^1.80.3",
-		"sass-loader": "^16.0.2",
-		"style-loader": "^4.0.0"
-	}
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@ant-design/icons": "^5.5.1",
+        "@tanstack/react-query": "^5.62.3",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "antd": "^5.22.2",
+        "axios": "^1.6.8",
+        "bootstrap": "^5.3.3",
+        "dotenv": "^16.4.5",
+        "html2pdf.js": "^0.10.2",
+        "i18next": "^23.14.0",
+        "jwt-decode": "^4.0.0",
+        "prop-types": "^15.8.1",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.10.4",
+        "react-dom": "^18.2.0",
+        "react-i18next": "^15.0.1",
+        "react-icons": "^5.3.0",
+        "react-router-dom": "^6.22.3",
+        "react-scripts": "^5.0.1",
+        "react-select": "^5.8.0",
+        "serve": "^14.2.3",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "lint": "eslint 'src/**/*.{js,jsx}'",
+        "format": "prettier --write 'src/**/*.{js,jsx,json,css,scss,md}'"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@eslint/js": "^9.13.0",
+        "autoprefixer": "^10.4.20",
+        "css-loader": "^7.1.2",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-react": "^7.37.1",
+        "globals": "^15.11.0",
+        "postcss": "^8.4.47",
+        "prettier": "^3.4.2",
+        "react-app-rewired": "^2.2.1",
+        "sass": "^1.80.3",
+        "sass-loader": "^16.0.2",
+        "style-loader": "^4.0.0"
+    }
 }
