--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "html2pdf.js": "^0.10.2",
         "i18next": "^23.14.0",
         "jwt-decode": "^4.0.0",
+        "moment": "^2.30.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.4",
