--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint": "eslint 'src/**/*.{js,jsx}'",
-        "format": "prettier --write 'src/**/*.{js,jsx,json,css,scss,md}'"
+        "format": "prettier --write 'src/**/*.{js,jsx,json,css,scss,md}'",
+        "prettier": "prettier --write ."
     },
     "eslintConfig": {
         "extends": [
