--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,18 +6,27 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
+        "plugin:react-hooks/recommended",
         "plugin:prettier/recommended"
     ],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 12,
+        "ecmaVersion": 2022,
         "sourceType": "module"
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
     },
     "rules": {
         "prettier/prettier": "error",
         "no-unused-vars": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "react/prop-types": "off",
+        "react/react-in-jsx-scope": "off",
+        "no-debugger": "warn"
     }
 }
