--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,10 +59,11 @@
         "@eslint/js": "^9.13.0",
         "autoprefixer": "^10.4.20",
         "css-loader": "^7.1.2",
-        "eslint": "^8.57.1",
+        "eslint": "^9.17.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
-        "eslint-plugin-react": "^7.37.1",
+        "eslint-plugin-react": "^7.37.3",
+        "eslint-plugin-react-hooks": "^5.1.0",
         "globals": "^15.11.0",
         "postcss": "^8.4.47",
         "prettier": "^3.4.2",
