--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,7 +21,7 @@ services:
             dockerfile: Dockerfile.prod
             target: builder # Используем только этап сборки
         environment:
-            - REACT_APP_API_URL=https://poleeducation.in.ua
+            - REACT_APP_API_URL=http://backend:3002
         container_name: frontend
         command: sh -c "pnpm run build" # Команда для сборки
         volumes:
