refactor: fix JudgementModal end add env

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
     backend:
         build:
@@ -46,6 +44,7 @@ services:
             - POSTGRES_PASSWORD=Igor18052008
         volumes:
             - db_data:/var/lib/postgresql/data
+            - ./db_backups:/backups
 
     nginx:
         build:
