--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,16 +24,16 @@
         "react-i18next": "^15.0.1",
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.22.3",
-        "react-scripts": "^5.0.1",
         "react-select": "^5.8.0",
         "serve": "^14.2.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
+        "dev": "vite",
+        "start": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "test": "vitest",
         "lint": "eslint 'src/**/*.{js,jsx}'",
         "format": "prettier --write 'src/**/*.{js,jsx,json,css,scss,md}'"
     },
@@ -59,13 +59,15 @@
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@eslint/js": "^9.13.0",
         "@iconify/react": "^5.1.0",
+        "@vitejs/plugin-react": "^5.1.1",
         "autoprefixer": "^10.4.20",
         "css-loader": "^7.1.2",
         "globals": "^15.11.0",
         "postcss": "^8.4.47",
-        "react-app-rewired": "^2.2.1",
         "sass": "^1.80.3",
         "sass-loader": "^16.0.2",
-        "style-loader": "^4.0.0"
+        "style-loader": "^4.0.0",
+        "vite": "^7.2.6",
+        "vite-plugin-svgr": "^4.5.0"
     }
 }
