--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
         env_file:
             - .env.production
         environment:
-            - DATABASE_URL=postgres://fedigo_admin:Igor18052008@db_auth:5432/poleeducation_db
+            - NODE_ENV=production
         depends_on:
             - db_auth
         volumes:
@@ -21,9 +21,9 @@ services:
             dockerfile: Dockerfile.prod
             target: builder # Используем только этап сборки
         environment:
-            - REACT_APP_API_URL=http://backend:3002
+            - VITE_API_URL=http://backend:3002
         container_name: frontend
-        command: sh -c "pnpm run build" # Команда для сборки
+        command: sh -c "npm run build" # Команда для сборки
         volumes:
             - build:/frontend/build
 
