fix: fix for deploy Dockerfile.prod

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,6 +1,9 @@
 # Указываем базовый образ Node.js
 FROM node:20-alpine
 
+# Устанавливаем переменную окружения для production
+ENV NODE_ENV=production
+
 # Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /backend
 
@@ -13,7 +16,7 @@ RUN npm install
 # Копируем все файлы проекта в контейнер
 COPY . .
 
-# Открываем порт 5000 для приложения
+# Открываем порт 3002 для приложения
 EXPOSE 3002
 
 # Команда для запуска приложения
